<resources>
    <string name="app_name">Premium Calculator</string>
    <string name="two_wheeler_insurance">Two Wheeler Insurance</string>
    <string name="private_car_insurance">Private Car Insurance</string>
    <string name="taxilessthan6_insurance">Taxi less than 6 passenger Insurance</string>
    <string name="last_year_idv">IDV</string>
    <string name="depreciation">Depreciation(%)</string>
    <string name="year_of_manufacture">Year of Manufacture</string>
    <string name="date_of_registration">Date Of Registration</string>
    <string name="zone">Zone</string>
    <string name="cubic_capacity">Cubic Capacity</string>
    <string name="discount_on_od">Discount on OD(%)</string>
    <string name="electrical_accessories_value">Electrical Accessories Value</string>
    <string name="nonelectrical_accessories_value">Non-Electrical Accessories Value</string>
    <string name="no_claim_bonus">No Claim Bonus(%)</string>
    <string name="zero_depreciation">Zero Depreciation</string>
    <string name="pa_to_owner_driver">PA to Owner Driver</string>
    <string name="ll_to_paid_driver">LL to Paid Driver</string>
    <string name="pa_to_unnamed_passenger">PA to Unnamed Passenger</string>
    <string name="calculate">Calculate</string>
    <string name="restrict_tppd">Restrict TPPD?</string>
    <string name="imt_23">IMT 23?</string>
    <string name="no_of_passengers">No of Passengers</string>
    <string name="gcv_3_wheeler_insurance">GCV 3 Wheeler Insurance</string>
    <string name="public_carrier">Public Carrier</string>
    <string name="private_carrier">Private Carrier</string>
    <string name="cng_lpg">CNG/LPG</string>
    <string name="pcv_3_wheeler_insurance">PCV 3 Wheeler Insurance</string>
    <string name="goods_carrying_vehicle">Goods Carrying Vehicle</string>
    <string name="gross_vehicle_weight_kgs">Gross Vehicle Weight(Kgs)(GVW)</string>
    <string name="non_faring_passenger_nfpp">Non Faring Passenger(NFPP)</string>
    <string name="geographical_extension">Geographical Extension</string>
    <string name="bus_more_than_6_passenger">Bus More than 6 Passenger</string>
    <string name="school_bus">School Bus</string>
    <string name="miscellaneous_vehicle">Miscellaneous Vehicle</string>
    <string name="cover_overturning">Cover Overturning</string>
    <string name="choose_vehicle">Choose Vehicle</string>
    <string name="commision">Commission</string>
    <string-array name="zone_array">
        <item>A</item>
        <item>B</item>
    </string-array>
    <string-array name="zone_array_withc">
        <item>A</item>
        <item>B</item>
        <item>C</item>
    </string-array>
    <string-array name="ncb_array">
        <item>0</item>
        <item>20</item>
        <item>25</item>
        <item>35</item>
        <item>45</item>
        <item>50</item>
    </string-array>
    <string-array name="vehicle_array">
        <item>Tractor</item>
        <item>Ambulance</item>
        <item>Drilling Rigs</item>
        <item>Trailer</item>
    </string-array>
    <string-array name="vehicleuse_array">
        <item>Agricultural</item>
        <item>Others</item>
    </string-array>
    <string-array name="company_list">
        <item>Choose an insurer…</item>
        <item>Acko General Insurance Co. Ltd.</item>
        <item>Bajaj Allianz General Insurance Co. Ltd.</item>
        <item>Bharti Axa General Insurance Co. Ltd.</item>
        <item>Cholamandalam MS General Insurance Co. Ltd.</item>
        <item>DHFL General Insurance Co. Ltd.</item>
        <item>Edelweiss General Insurance Co. Ltd.</item>
        <item>Future Generali India Insurance Co. Ltd.</item>
        <item>Go Digit General Insurance Ltd.</item>
        <item>HDFC Ergo Insurance Co. Ltd.</item>
        <item>ICICI Lombard General Insurance Co. Ltd.</item>
        <item>Iffco Tokio General Insurance Co. Ltd.</item>
        <item>Kotak Mahindra Insurance Co. Ltd.</item>
        <item>Liberty General Insurance Co. Ltd.</item>
        <item>Magma HDI General Insurance Co. Ltd.</item>
        <item>National Insurance Co. Ltd.</item>
        <item>Raheja QBE General Insurance Co. Ltd.</item>
        <item>Reliance General Insurance Co. Ltd.</item>
        <item>Royal Sundaram General Insurance Co. Ltd.</item>
        <item>SBI General Insurance Co. Ltd.</item>
        <item>Shriram General Insurance Co. Ltd.</item>
        <item>Tata AIG General Insurance Co. Ltd.</item>
        <item>The New India Assurance Co. Ltd.</item>
        <item>The Oriental Insurance Co. Ltd.</item>
        <item>United India Insurance Co. Ltd.</item>
        <item>Universal Sompo General Insurance Co. Ltd.</item>
    </string-array>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
</resources>
