<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".gcv">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableLayout
            android:id="@+id/table"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TableRow>
                <RadioGroup
                    android:id="@+id/carrier_value"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    style="@style/style_radiogroup_table"
                    android:layout_weight="1"
                    android:orientation="horizontal">
                    <RadioButton
                        android:id="@+id/public_yes"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/public_carrier"
                        android:checked="true">

                    </RadioButton>

                    <RadioButton
                        android:id="@+id/private_yes"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/private_carrier">
                    </RadioButton>
                </RadioGroup>
            </TableRow>

            <TableRow>
                <TextView
                    android:id="@+id/idv"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    style="@style/style_textbox_table"
                    android:text="@string/last_year_idv" />

                <EditText
                    android:id="@+id/idv_value"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    style="@style/style_edittext_table"
                    android:autofillHints=""
                    android:ems="10"
                    android:inputType="numberDecimal"/>
            </TableRow>

            <TableRow>
                <TextView
                    android:id="@+id/dateofregistration"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    style="@style/style_textbox_table"
                    android:text="@string/date_of_registration" />

                <EditText
                    android:id="@+id/dateofregistration_value"
                    android:layout_width="0dp"
                    android:focusable="false"
                    android:layout_height="wrap_content"
                    style="@style/style_edittext_table"
                    android:ems="10"
                    android:inputType="date" />
            </TableRow>

            <TableRow>
                <TextView
                    android:id="@+id/zone"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    style="@style/style_textbox_table"
                    android:text="@string/zone" />


                <Spinner
                    android:id="@+id/zone_value"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    style="@style/style_spinner_table"/>
            </TableRow>

            <TableRow>
                <TextView
                    android:id="@+id/gvw"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    style="@style/style_textbox_table"
                    android:text="@string/gross_vehicle_weight_kgs" />

                <EditText
                    android:id="@+id/gvw_value"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    style="@style/style_edittext_table"
                    android:autofillHints=""
                    android:ems="10"
                    android:inputType="numberDecimal"/>
            </TableRow>

            <TableRow>
                <TextView
                    android:id="@+id/discount"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    style="@style/style_textbox_table"
                    android:text="@string/discount_on_od" />


                <EditText
                    android:id="@+id/discount_value"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    style="@style/style_edittext_table"
                    android:autofillHints=""
                    android:ems="10"
                    android:inputType="numberDecimal"/>
            </TableRow>

            <TableRow>
                <TextView
                    android:id="@+id/electrical_accessories"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    style="@style/style_textbox_table"
                    android:text="@string/electrical_accessories_value" />


                <EditText
                    android:id="@+id/electrical_accessories_value"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    style="@style/style_edittext_table"
                    android:autofillHints=""
                    android:ems="10"
                    android:inputType="numberDecimal"/>
            </TableRow>

            <TableRow>
                <TextView
                    android:id="@+id/nonelectrical_accessories"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    style="@style/style_textbox_table"
                    android:text="@string/nonelectrical_accessories_value" />


                <EditText
                    android:id="@+id/nonelectrical_accessories_value"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    style="@style/style_edittext_table"
                    android:autofillHints=""
                    android:ems="10"
                    android:inputType="numberDecimal"/>
            </TableRow>

            <TableRow>
                <TextView
                    android:id="@+id/ncb"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    style="@style/style_textbox_table"
                    android:text="@string/no_claim_bonus" />


                <Spinner
                    android:id="@+id/ncb_value"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    style="@style/style_spinner_table"
                    android:autofillHints=""
                    android:ems="10"
                    android:inputType="numberDecimal"/>
            </TableRow>

            <TableRow>
                <TextView
                    android:id="@+id/zerodep"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    style="@style/style_textbox_table"
                    android:text="@string/zero_depreciation" />


                <EditText
                    android:id="@+id/zerodep_value"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    style="@style/style_edittext_table"
                    android:autofillHints=""
                    android:ems="10"
                    android:inputType="numberDecimal"/>
            </TableRow>

            <TableRow>
                <TextView
                    android:id="@+id/geoext"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    style="@style/style_textbox_table"
                    android:text="@string/geographical_extension" />


                <CheckBox
                    android:id="@+id/geoext_value"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="Yes"
                    style="@style/style_checkbox_table"
                    android:ems="10"/>
            </TableRow>

            <TableRow>
                <TextView
                    android:id="@+id/cng"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    style="@style/style_textbox_table"
                    android:text="@string/cng_lpg" />

                <CheckBox
                    android:id="@+id/yes_cng"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    style="@style/style_checkbox_table"
                    android:text="Yes"/>
            </TableRow>

            <TableRow>
                <TextView
                    android:id="@+id/extcng"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    style="@style/style_textbox_table"
                    android:text="External CNG/LPG Kit Value" />


                <EditText
                    android:id="@+id/extcng_value"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    style="@style/style_edittext_table"
                    android:autofillHints=""
                    android:ems="10"
                    android:enabled="false"
                    android:inputType="numberDecimal"/>
            </TableRow>

            <TableRow>
                <TextView
                    android:id="@+id/patoownerdriver"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    style="@style/style_textbox_table"
                    android:text="@string/pa_to_owner_driver" />


                <EditText
                    android:id="@+id/patoownerdriver_value"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    style="@style/style_edittext_table"
                    android:autofillHints=""
                    android:ems="10"
                    android:inputType="numberDecimal"/>
            </TableRow>

            <TableRow>
                <TextView
                    android:id="@+id/lltopaiddriver"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    style="@style/style_textbox_table"
                    android:text="@string/ll_to_paid_driver" />


                <EditText
                    android:id="@+id/lltopaiddriver_value"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    style="@style/style_edittext_table"
                    android:autofillHints=""
                    android:ems="10"
                    android:inputType="numberDecimal"/>
            </TableRow>

            <TableRow>
                <TextView
                    android:id="@+id/nfpp"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    style="@style/style_textbox_table"
                    android:text="@string/non_faring_passenger_nfpp" />

                <EditText
                    android:id="@+id/nfpp_value"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    style="@style/style_edittext_table"
                    android:autofillHints=""
                    android:ems="10"
                    android:inputType="numberDecimal"/>
            </TableRow>

            <TableRow>
                <TextView
                    android:id="@+id/restricttppd"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    style="@style/style_textbox_table"
                    android:text="@string/restrict_tppd" />


                <RadioGroup
                    android:id="@+id/restricttppd_value"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    style="@style/style_radiogroup_table"
                    android:orientation="horizontal">
                    <RadioButton
                        android:id="@+id/yes"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Yes">

                    </RadioButton>
                    <RadioButton
                        android:id="@+id/no"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="No"
                        android:checked="true">

                    </RadioButton>
                </RadioGroup>
            </TableRow>

            <TableRow>
                <TextView
                    android:id="@+id/imt23"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    style="@style/style_textbox_table"
                    android:text="@string/imt_23" />


                <RadioGroup
                    android:id="@+id/imt23_value"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    style="@style/style_radiogroup_table"
                    android:orientation="horizontal">
                    <RadioButton
                        android:id="@+id/yes_imt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Yes">

                    </RadioButton>
                    <RadioButton
                        android:id="@+id/no_imt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="No"
                        android:checked="true">

                    </RadioButton>
                </RadioGroup>
            </TableRow>

        </TableLayout>

        <Button
            android:id="@+id/calculate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/calculate"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/table"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            style="@style/style_button"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>