<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".two_wheeler">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/heading"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/two_wheeler_insurance"
            android:background="@color/colorPrimary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TableLayout
            android:id="@+id/table"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/heading">

            <TableRow>
                <TextView
                    android:id="@+id/idv"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="@dimen/table_cell_leftweightfortwowheeler"
                    android:layout_margin="@dimen/table_cell_marginfortwowheeler"
                    android:text="@string/last_year_idv" />


                <EditText
                    android:id="@+id/idv_value"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="@dimen/table_cell_rightweightfortwowheeler"
                    android:layout_margin="@dimen/table_cell_marginfortwowheeler"
                    android:autofillHints=""
                    android:ems="10"
                    android:inputType="numberDecimal"/>
            </TableRow>

            <TableRow>
                <TextView
                    android:id="@+id/dateofregistration"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="@dimen/table_cell_leftweightfortwowheeler"
                    android:layout_margin="@dimen/table_cell_marginfortwowheeler"
                    android:text="@string/date_of_registration" />

                <EditText
                    android:id="@+id/dateofregistration_value"
                    android:layout_width="0dp"
                    android:focusable="false"
                    android:layout_height="wrap_content"
                    android:layout_weight="@dimen/table_cell_rightweightfortwowheeler"
                    android:ems="10"
                    android:inputType="date" />
            </TableRow>

            <TableRow>
                <TextView
                    android:id="@+id/zone"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="@dimen/table_cell_leftweightfortwowheeler"
                    android:layout_margin="@dimen/table_cell_marginfortwowheeler"
                    android:text="@string/zone" />


                <Spinner
                    android:id="@+id/zone_value"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="@dimen/table_cell_rightweightfortwowheeler"
                    android:layout_margin="@dimen/table_cell_marginfortwowheeler"/>
            </TableRow>

            <TableRow>
                <TextView
                    android:id="@+id/cubicapacity"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="@dimen/table_cell_leftweightfortwowheeler"
                    android:layout_margin="@dimen/table_cell_marginfortwowheeler"
                    android:text="@string/cubic_capacity" />


                <EditText
                    android:id="@+id/cubicapacity_value"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="@dimen/table_cell_rightweightfortwowheeler"
                    android:layout_margin="@dimen/table_cell_marginfortwowheeler"
                    android:autofillHints=""
                    android:ems="10"
                    android:inputType="numberDecimal"/>
            </TableRow>

            <TableRow>
                <TextView
                    android:id="@+id/discount"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="@dimen/table_cell_leftweightfortwowheeler"
                    android:layout_margin="@dimen/table_cell_marginfortwowheeler"
                    android:text="@string/discount_on_od" />


                <EditText
                    android:id="@+id/discount_value"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="@dimen/table_cell_rightweightfortwowheeler"
                    android:layout_margin="@dimen/table_cell_marginfortwowheeler"
                    android:autofillHints=""
                    android:ems="10"
                    android:inputType="numberDecimal"/>
            </TableRow>

            <TableRow>
                <TextView
                    android:id="@+id/electrical_accessories"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="@dimen/table_cell_leftweightfortwowheeler"
                    android:layout_margin="@dimen/table_cell_marginfortwowheeler"
                    android:text="@string/electrical_accessories_value" />


                <EditText
                    android:id="@+id/electrical_accessories_value"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="@dimen/table_cell_rightweightfortwowheeler"
                    android:layout_margin="@dimen/table_cell_marginfortwowheeler"
                    android:autofillHints=""
                    android:ems="10"
                    android:inputType="numberDecimal"/>
            </TableRow>

            <TableRow>
                <TextView
                    android:id="@+id/nonelectrical_accessories"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="@dimen/table_cell_leftweightfortwowheeler"
                    android:layout_margin="@dimen/table_cell_marginfortwowheeler"
                    android:text="@string/nonelectrical_accessories_value" />


                <EditText
                    android:id="@+id/nonelectrical_accessories_value"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="@dimen/table_cell_rightweightfortwowheeler"
                    android:layout_margin="@dimen/table_cell_marginfortwowheeler"
                    android:autofillHints=""
                    android:ems="10"
                    android:inputType="numberDecimal"/>
            </TableRow>

            <TableRow>
                <TextView
                    android:id="@+id/ncb"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="@dimen/table_cell_leftweightfortwowheeler"
                    android:layout_margin="@dimen/table_cell_marginfortwowheeler"
                    android:text="@string/no_claim_bonus" />


                <Spinner
                    android:id="@+id/ncb_value"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="@dimen/table_cell_rightweightfortwowheeler"
                    android:layout_margin="@dimen/table_cell_marginfortwowheeler"
                    android:autofillHints=""
                    android:ems="10"
                    android:inputType="numberDecimal"/>
            </TableRow>

            <TableRow>
                <TextView
                    android:id="@+id/zerodep"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="@dimen/table_cell_leftweightfortwowheeler"
                    android:layout_margin="@dimen/table_cell_marginfortwowheeler"
                    android:text="@string/zero_depreciation" />


                <EditText
                    android:id="@+id/zerodep_value"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="@dimen/table_cell_rightweightfortwowheeler"
                    android:layout_margin="@dimen/table_cell_marginfortwowheeler"
                    android:autofillHints=""
                    android:ems="10"
                    android:inputType="numberDecimal"/>
            </TableRow>

            <TableRow>
                <TextView
                    android:id="@+id/patoownerdriver"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="@dimen/table_cell_leftweightfortwowheeler"
                    android:layout_margin="@dimen/table_cell_marginfortwowheeler"
                    android:text="@string/pa_to_owner_driver" />


                <EditText
                    android:id="@+id/patoownerdriver_value"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="@dimen/table_cell_rightweightfortwowheeler"
                    android:layout_margin="@dimen/table_cell_marginfortwowheeler"
                    android:autofillHints=""
                    android:ems="10"
                    android:inputType="numberDecimal"/>
            </TableRow>

            <TableRow>
                <TextView
                    android:id="@+id/lltopaiddriver"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="@dimen/table_cell_leftweightfortwowheeler"
                    android:layout_margin="@dimen/table_cell_marginfortwowheeler"
                    android:text="@string/ll_to_paid_driver" />


                <EditText
                    android:id="@+id/lltopaiddriver_value"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="@dimen/table_cell_rightweightfortwowheeler"
                    android:layout_margin="@dimen/table_cell_marginfortwowheeler"
                    android:autofillHints=""
                    android:ems="10"
                    android:inputType="numberDecimal"/>
            </TableRow>

            <TableRow>
                <TextView
                    android:id="@+id/patounnamedpassenger"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="@dimen/table_cell_leftweightfortwowheeler"
                    android:layout_margin="@dimen/table_cell_marginfortwowheeler"
                    android:text="@string/pa_to_unnamed_passenger" />


                <EditText
                    android:id="@+id/patounnamedpassenger_value"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="@dimen/table_cell_rightweightfortwowheeler"
                    android:layout_margin="@dimen/table_cell_marginfortwowheeler"
                    android:autofillHints=""
                    android:ems="10"
                    android:inputType="numberDecimal"/>
            </TableRow>

            <TableRow>
                <TextView
                    android:id="@+id/restricttppd"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="@dimen/table_cell_leftweightfortwowheeler"
                    android:layout_margin="@dimen/table_cell_marginfortwowheeler"
                    android:text="@string/restrict_tppd" />


                <RadioGroup
                    android:id="@+id/restricttppd_value"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="@dimen/table_cell_rightweightfortwowheeler"
                    android:layout_margin="@dimen/table_cell_marginfortwowheeler"
                    android:orientation="horizontal">
                    <RadioButton
                        android:id="@+id/yes"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Yes"></RadioButton>
                    <RadioButton
                        android:id="@+id/no"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="No"
                        android:checked="true"></RadioButton>
                </RadioGroup>
            </TableRow>

        </TableLayout>

        <Button
            android:id="@+id/calculate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/calculate"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/table"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>